# MMEXtend

./: .gitignore  README.md  __debug_gbp.py  ai-instructions.md  justfile  pyproject.toml  skills-lock.json
.github/: copilot-instructions.md
.roo/: rules.md
configs/: categories.yaml  pipeline.yaml
data/interim/: rate_cache.json
docs/: 01_PROJECT_OVERVIEW.md  02_DIRECTORY_SETUP.md  03_LOGGING.md  04_INGESTION.md  06_STORAGE_LOCAL.md  08_FINANCE_STATISTICS.md
docs/schema/: mmex_schema.md
instructions/: 05_STORAGE_GCP.md  07_NOTEBOOK_INTERVIEW.md
notebooks/: 00_data_quality.ipynb  01_wrangle.ipynb  02_expense_trends.ipynb  03_cashflow_forecast.ipynb
scripts/: run_pipeline.py
src/: __init__.py
src/analysis/: __init__.py  cashflow_forecast.py  expense_trends.py  feature_engineering.py  seasonality_tests.py
src/ingestion/: __init__.py  currency_converter.py  mmex_csv_parser.py  mmex_sqlite_parser.py  rate_fetcher.py  schemas.py  validator.py
src/storage/: __init__.py  local_writer.py
src/utils/: __init__.py  config_loader.py  logging_config.py
tests/: conftest.py
tests/test_analysis/: test_cashflow_forecast.py  test_expense_trends.py  test_feature_engineering.py  test_seasonality_tests.py
tests/test_ingestion/: test_currency_converter.py  test_mmex_csv_parser.py  test_mmex_sqlite_parser.py  test_rate_fetcher.py  test_schemas.py  test_validator.py
tests/test_storage/: test_local_writer.py
tests/test_utils/: test_config_loader.py  test_logging_config.py
