[tool.poetry]
name = "mmextend"
version = "0.1.0"
description = "Modular personal finance analysis pipeline for MMEX data"
authors = []
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = ">=2.0"
pyarrow = ">=14.0"
pydantic = ">=2.0"
statsmodels = ">=0.14"
chardet = ">=5.0"
requests = ">=2.31"
PyYAML = ">=6.0"
matplotlib = ">=3.7"
seaborn = ">=0.13"
plotly = ">=5.18"
jupyterlab = ">=4.0"
ipykernel = "*"
tqdm = "^4.67.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-cov = "*"
ruff = "*"
ipykernel = "^7.2.0"

[tool.poetry.group.forecast.dependencies]
prophet = ">=1.1"
scikit-learn = ">=1.3"
pmdarima = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
